--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,12 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    scroll-snap-type: y mandatory;
+}
+
+.servicios, .navegacion-principal,.formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 
 *, *:before, *:after {
@@ -59,6 +65,11 @@ h1,h2,h3 {
     border-radius: .5rem;
     width: 90%;
     text-align: center;
+    border: none;
+}
+
+.boton:hover {
+    cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -131,4 +142,106 @@ h1,h2,h3 {
 .contenido-hero h2,
 .contenido-hero p {
     color: var(--blanco);
+}
+
+
+
+@media (min-width: 768px) {
+    .servicios {
+        display: grid;
+        /* 
+        grid-template-columns: 30rem 30rem;
+        grid-template-rows: 20rem 80rem;
+        */
+        grid: 1fr / repeat(3, 1fr);
+        column-gap: 4rem;
+    }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: normal;
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem, 100%);
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    color: var(--primario);
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.campo {
+    margin-bottom: 1.5rem;
+    color: var(--blanco);
+    font-weight: bold;
+    display: block;
+}
+
+.campo textarea {
+    height: 20rem;
+    resize: none;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: .5rem;
+}
+
+.w-sm-100 {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-sm-100 {
+        width: auto;
+    }
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
+}
+
+.flex {
+    display: flex;
+}
+
+.footer {
+    text-align: center;
 }
